--- a/CMSExample/src/main/webapp/admin/index.html
+++ b/CMSExample/src/main/webapp/admin/index.html
@@ -5,12 +5,11 @@
 <body class="lift:content_id=main">
 	<div id="main" data-lift="TemplateSelector">
 		<section id="admin_panel">
-			<ul data-lift="ListBackendAreas" data-role="listview">
+			<ul data-lift="ListBackendAreas">
 				<li data-lift-id="area">
 					<a data-lift-id="url">
-						<img data-lift-id="icon" />
-						<h1 data-lift-id="name"></h1>
-						<p data-lift-id="description"></p>
+						<img data-lift-id="icon" /><br />
+						<span data-lift-id="name"></span>
 					</a>
 				</li>
 			</ul>
