--- a/CMSExample/src/main/webapp/setup.html
+++ b/CMSExample/src/main/webapp/setup.html
@@ -6,9 +6,9 @@
 	<div id="main" class="lift:TemplateSelector">
 		<article>
 			<h1>
-				<span class="lift:Loc.SETUP_WELCOME"></span>
+				<span data-lift="Loc.SETUP_WELCOME"></span>
 			</h1>
-			<div class="lift:SetupWizard"></div>
+			<div data-lift="SetupWizard"></div>
 		</article>
 	</div>
 </body>
