--- a/CMSExample/src/main/webapp/admin/index.html
+++ b/CMSExample/src/main/webapp/admin/index.html
@@ -8,8 +8,10 @@
 			<ul data-lift="ListBackendAreas">
 				<li data-lift-id="area">
 					<a data-lift-id="url">
-						<img data-lift-id="icon" /><br />
-						<span data-lift-id="name"></span>
+						<span> 
+							<img data-lift-id="icon" /><br />
+							<span data-lift-id="name"></span>
+						</span>
 					</a>
 				</li>
 			</ul>
