--- a/CMSExample/src/main/webapp/admin/pages.html
+++ b/CMSExample/src/main/webapp/admin/pages.html
@@ -6,14 +6,18 @@
 	<div id="main" data-lift="TemplateSelector">
 		<article>
 			<header>
-				<h1><span data-lift="Loc.MANAGE_PAGES"></span></h1>
+				<h1>
+					<span data-lift="Loc.MANAGE_PAGES"></span>
+				</h1>
 			</header>
 			
 			<div data-lift="ManagePages"></div>
-			
-			<footer>
-				<a href="/admin/add-page"><span data-lift="Loc.ADD_PAGE">Add page</span></a>
-			</footer>
+
+			<form data-lift="Form.ajax">
+				<div data-lift="CreatePage">
+					<input name="name" /><input name="submit" />
+				</div>
+			</form>
 		</article>
 	</div>
 </body>
