--- a/BlogExample/src/main/webapp/admin/permissions.html
+++ b/BlogExample/src/main/webapp/admin/permissions.html
@@ -3,16 +3,16 @@
 <head>
 </head>
 <body class="lift:content_id=main">
-	<div id="main" class="lift:TemplateSelector">
+	<div id="main" data-lift="TemplateSelector">
 		<article id="permissions">
 			<header>
 				<h1>
-					<span class="lift:Loc.PERMISSION_SETTINGS"></span>
+					<span data-lift="Loc.PERMISSION_SETTINGS"></span>
 				</h1>
 			</header>
 
-			<form class="lift:form.ajax">
-				<div class="lift:Permissions"></div>
+			<form data-lift="Form.ajax">
+				<div data-lift="Permissions"></div>
 			</form>
 		</article>
 	</div>
