--- a/BlogExample/src/main/webapp/admin/add-page.html
+++ b/BlogExample/src/main/webapp/admin/add-page.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body class="lift:content_id=main">
-	<div id="main" class="lift:TemplateSelector">
+	<div id="main" data-lift="TemplateSelector">
 		<div data-lift="CreatePage"></div>
 	</div>
 </body>
