--- a/BlogExample/src/main/webapp/admin/general.html
+++ b/BlogExample/src/main/webapp/admin/general.html
@@ -3,11 +3,11 @@
 <head>
 </head>
 <body class="lift:content_id=main">
-	<div id="main" class="lift:TemplateSelector">
+	<div id="main" data-lift="TemplateSelector">
 		<article>
 			<header>
-				<h1><span class="lift:Loc.GENERAL_SETTINGS"></span></h1>
-				<div class="lift:GeneralSettings"></div>
+				<h1><span data-lift="Loc.GENERAL_SETTINGS"></span></h1>
+				<div data-lift="GeneralSettings"></div>
 			</header>
 		</article>
 	</div>
