--- a/BlogExample/src/main/webapp/admin/users/manage-roles.html
+++ b/BlogExample/src/main/webapp/admin/users/manage-roles.html
@@ -3,10 +3,10 @@
 <head>
 </head>
 <body class="lift:content_id=main">
-	<div id="main" class="lift:TemplateSelector">
+	<div id="main" data-lift="TemplateSelector">
 
-		<form class="lift:form.ajax">
-			<div class="lift:ManageRoles">
+		<form data-lift="Form.ajax">
+			<div data-lift="ManageRoles">
 				<article>
 					<header>
 						<h1><span data-name="title"></span></h1>
