--- a/CMSExample/src/main/webapp/templates-hidden/default.html
+++ b/CMSExample/src/main/webapp/templates-hidden/default.html
@@ -8,6 +8,8 @@
 	rel="stylesheet" media="screen, projection">
 <link href="/classpath/blueprint/print.css" type="text/css"
 	rel="stylesheet" media="print">
+	<script src="/js/jquery.js"></script>
+	<script src="/js/jquery-ui.js"></script>
 </head>
 <body>
 	<header>
@@ -92,7 +94,8 @@
 
 	</footer>
 
-	<script src="/js/jquery.js"></script>
+	
 	<script id="json" src="/classpath/json.js"></script>
+	
 </body>
 </html>
