--- a/CMSExample/src/main/webapp/page.html
+++ b/CMSExample/src/main/webapp/page.html
@@ -12,17 +12,25 @@
 			</header>
 
 			<textarea data-lift-id="content" data-lift="TestCondition.isAdmin">Some text</textarea>
-			<p data-lift-id="content" data-lift="TestCondition.notAdmin">Some text</p>
+			<p data-lift-id="content" data-lift="TestCondition.notAdmin">Some
+				text</p>
 
-			<div data-lift-id="editor">
-				<hr />
-				<div data-lift="ImageRepository" class="rte">
-					<ul data-lift-id="items">
-						<li data-lift-id="item"><img class="draggable"
-							style="width: 64px" /></li>
-					</ul>
+			<footer>
+				<button type="button" data-lift-id="save"><span data-lift="Loc.i">SAVE</span></button>
+				<div data-lift-id="editor">
+					
+					<hr />
+					<div data-lift="ImageRepository" class="rte">
+						<ul data-lift-id="items">
+							<li data-lift-id="item"><img class="draggable"
+								style="width: 64px" /></li>
+						</ul>
+					</div>
 				</div>
-			</div>
+			</footer>
+
+
+
 		</article>
 
 		<script language="javascript">
@@ -30,8 +38,9 @@
 				var img = this.cloneNode();
 				img.style.removeProperty('width');
 
-				event.dataTransfer.setData('text/html', '<img src="' + img.src + '" />');
-// 				event.dataTransfer.setData('Text', '!' + img.src + '(ALT)!');
+				event.dataTransfer.setData('text/html',
+						'<img src="' + img.src + '" />');
+				// 				event.dataTransfer.setData('Text', '!' + img.src + '(ALT)!');
 				event.dataTransfer.effectAllowed = 'copy';
 				event.dataTransfer.dropEffect = 'copy';
 
@@ -42,7 +51,7 @@
 			[].forEach.call(cols, function(col) {
 				col.addEventListener('dragstart', handleDragStart, false);
 			});
- 		</script>
+		</script>
 	</div>
 </body>
 </html>
