--- a/CMSExample/src/main/webapp/page.html
+++ b/CMSExample/src/main/webapp/page.html
@@ -15,21 +15,19 @@
 			<p data-lift-id="content" data-lift="TestCondition.notAdmin">Some
 				text</p>
 
-			<footer>
-				<button type="button" data-lift-id="save"><span data-lift="Loc.i">SAVE</span></button>
-				<div data-lift-id="editor">
-					
-					<hr />
-					<div data-lift="ImageRepository" class="rte">
-						<ul data-lift-id="items">
-							<li data-lift-id="item"><img class="draggable"
-								style="width: 64px" /></li>
-						</ul>
-					</div>
+			<button data-lift="TestCondition.isAdmin" type="button" data-lift-id="save">
+				<span data-lift="Loc.i">SAVE</span>
+			</button>
+
+			<div data-lift-id="editor">
+				<hr />
+				<div data-lift="ImageRepository" class="rte">
+					<ul data-lift-id="items">
+						<li data-lift-id="item"><img class="draggable"
+							style="width: 64px" /></li>
+					</ul>
 				</div>
-			</footer>
-
-
+			</div>
 
 		</article>
 
