--- a/CMSExample/src/main/webapp/admin/users.html
+++ b/CMSExample/src/main/webapp/admin/users.html
@@ -13,7 +13,7 @@
 
 			<div data-lift="LazyLoad">
 				<form data-lift="Form.ajax">
-					<div data-lift="ListUsers">
+					<div data-lift="Comet?type=ListUsers">
 						<table>
 							<thead>
 								<tr>
