--- a/CMSExample/src/main/webapp/templates-hidden/default.html
+++ b/CMSExample/src/main/webapp/templates-hidden/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
+<meta data-lift="MetaTags">
 <title data-lift="Menu.title"></title>
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 <link href="/classpath/blueprint/src/forms.css" type="text/css"
