--- a/CMSExample/src/main/webapp/templates-hidden/default.html
+++ b/CMSExample/src/main/webapp/templates-hidden/default.html
@@ -9,7 +9,7 @@
 	rel="stylesheet" media="screen, projection">
 <link href="/classpath/blueprint/print.css" type="text/css"
 	rel="stylesheet" media="print">
-<script src="/js/jquery.js"></script>
+<script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
 <script src="/js/jquery-ui.js"></script>
 </head>
 <body>
