--- a/CMSExample/src/main/webapp/admin/upload-file.html
+++ b/CMSExample/src/main/webapp/admin/upload-file.html
@@ -11,8 +11,8 @@
 				</h1>
 
 				<form data-lift="UploadFile?form=post&multipart=true&ajax=true">
-					<label for="repositories"><span data-lift="Loc.CONTENT_REPOSITORY"></span></label> <input name="repositories" /><br />
-					<label for="file"><span data-lift="Loc.FILE"></span></label> <input name="file" /><br /> <input
+					<label for="repositories"><span data-lift="Loc.i">CONTENT_REPOSITORY</span></label> <input name="repositories" /><br />
+					<label for="file"><span data-lift="Loc.i">FILE</span></label> <input name="file" /><br /> <input
 						type="submit" />
 				</form>
 			</header>
