--- a/CMSExample/src/main/webapp/admin/pages.html
+++ b/CMSExample/src/main/webapp/admin/pages.html
@@ -14,7 +14,9 @@
 
 			<form data-lift="Form.ajax">
 				<div data-lift="CreatePage">
-					<input name="name" /><input name="submit" />
+					<input name="name" />
+					<input name="template" />
+					<input name="submit" />
 				</div>
 			</form>
 		</article>
