--- a/CMSExample/src/main/webapp/templates-hidden/default.html
+++ b/CMSExample/src/main/webapp/templates-hidden/default.html
@@ -7,9 +7,7 @@
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 <link href="/classpath/blueprint/src/forms.css" type="text/css"
 	rel="stylesheet" media="screen, projection">
-<link href="/classpath/blueprint/print.css" type="text/css"
-	rel="stylesheet" media="print">
-<script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+<script src="/js/jquery.js"></script>
 <script src="/js/jquery-ui.js"></script>
 </head>
 <body>
@@ -55,6 +53,7 @@
 				href="http://liftweb.net"><img
 				src="/images/liftweb-logo-plain.png" alt="LiftWeb" /></a>
 		</section>
+		<div style="clear:both"></div>
 	</section>
 
 	<div id="center_panel">
